# cookiecutter-invenio-rdm

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  LICENSE  README.md  README.rst  cookiecutter.json  run-tests.sh
.github/: default-config.yml
.github/workflows/: release.yml
diffs/: oarepo-to-rdm-v11.0.patch
hooks/: post_gen_project.sh
scripts/: bootstrap  build-images.sh  server  setup  wait-for-services.sh
{{cookiecutter.project_shortname}}/: .gitignore  Dockerfile  Dockerfile.base  Dockerfile_alma  Dockerfile_alpine  INSTALL.rst  Pipfile  README.md  README.rst  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.full.yml  docker-compose.yml  docker-services.yml  example.env  invenio.cfg  pyproject.toml  setup.py  wipe_recreate.sh  {{ "pyproject.toml" if cookiecutter.python_package_manager == "uv" else "Pipfile" }}  {{cookiecutter.python_package_manager == "uv" and "pyproject.toml" or "Pipfile"}}
{{cookiecutter.project_shortname}}/app_data/: vocabularies.yaml
{{cookiecutter.project_shortname}}/app_data/vocabularies/: .gitkeep  names.yaml  names_orcid_rdm.yaml  subjects.yaml  subjects_default.yaml
{{cookiecutter.project_shortname}}/assets/js/invenio_app_rdm/overridableRegistry/: mapping.js
{{cookiecutter.project_shortname}}/assets/less/: theme.config  theme.less
{{cookiecutter.project_shortname}}/assets/less/site/: css.overrides
{{cookiecutter.project_shortname}}/assets/less/site/globals/: site.overrides  site.variables
{{cookiecutter.project_shortname}}/assets/scss/{{cookiecutter.project_shortname}}/: theme.scss
{{cookiecutter.project_shortname}}/assets/templates/: .readme
{{cookiecutter.project_shortname}}/assets/templates/custom_fields/: .readme
{{cookiecutter.project_shortname}}/docker/: Dockerfile  Dockerfile.development  Dockerfile.production  build-images.sh
{{cookiecutter.project_shortname}}/docker/nginx/: nginx.conf
{{cookiecutter.project_shortname}}/docker/nginx/conf.d/: default.conf
{{cookiecutter.project_shortname}}/docker/pgadmin/: servers.json
{{cookiecutter.project_shortname}}/docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
{{cookiecutter.project_shortname}}/scripts/: bootstrap  server  setup
{{cookiecutter.project_shortname}}/site/: .gitkeep  pyproject.toml  setup.cfg
{{cookiecutter.project_shortname}}/site/{{cookiecutter.package_name}}/: views.py  webpack.py
{{cookiecutter.project_shortname}}/site/{{cookiecutter.package_name}}/templates/semantic-ui/oarepo_ui/: detail.html  footer.html  header.html  javascript.html  trackingcode.html
{{cookiecutter.project_shortname}}/site/{{cookiecutter.package_name}}/templates/semantic-ui/{{cookiecutter.package_name}}/: searchbar.html
{{cookiecutter.project_shortname}}/templates/semantic-ui/oarepo_ui/: footer.html  javascript.html
