{%- set project_shortname = cookiecutter.project_shortname -%}
{%- set app_rdm_version = "~=14.0.0b3.dev3" -%}
{%- set app_rdm_base = "invenio-app-rdm" ~ app_rdm_version -%}
{%- set app_rdm_extras = ['opensearch2'] -%}
{%- if cookiecutter.file_storage == 'S3' -%}
  {%- set app_rdm_extras = app_rdm_extras + ['s3'] -%}
{%- endif -%}
{%- if cookiecutter.site_code == 'yes' -%}
  {%- set site_dist_name = cookiecutter.package_name + '_package' -%}
{%- endif -%}

[project]
name = "{{ cookiecutter.project_name | slugify() }}"
description = "Add your description here"
readme = "README.md"
version = "14.0.0"
requires-python = ">= 3.12"

dependencies = [
  "invenio-app-rdm{% if app_rdm_extras %}[{{ app_rdm_extras | join(',') }}]{% endif %}{{ app_rdm_version }}",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  {% if cookiecutter.development_tools == 'yes' -%}
  "invenio-cli>=1.0.0",
  {% endif -%}
  {% if cookiecutter.site_code == 'yes' -%}
  "{{ site_dist_name }}",
  {%- endif %}
]

{% if cookiecutter.site_code == 'yes' -%}
[tool.uv.sources]
"{{ site_dist_name }}" = { workspace = true }
[tool.uv.workspace]
members = ["site"]

[tool.hatch.build.targets.wheel]
packages = ["site/{{ cookiecutter.package_name }}"]
{%- endif %}

[project.optional-dependencies]
sentry = [
    "sentry-sdk>=1.45,<2.0.0",
]
tests = [
    "pytest-invenio>=3.0.0,<4.0.0",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.16.0",
    "pytest-invenio>=3.0.0,<4.0.0",
]
