{%- set project_shortname = cookiecutter.project_shortname -%}
{%- set app_rdm_version = "~=14.0.0b11.dev1" -%}
{%- set app_rdm_base = "invenio-app-rdm" ~ app_rdm_version -%}
{%- set app_rdm_extras = ['opensearch2'] -%}
{%- if cookiecutter.file_storage == 'S3' -%}
  {%- set app_rdm_extras = app_rdm_extras + ['s3'] -%}
{%- endif -%}
{%- if cookiecutter.site_code == 'yes' -%}
  {%- set site_dist_name = cookiecutter.package_name + '_package' -%}
{%- endif -%}

[project]
name = "{{ cookiecutter.project_name | slugify() }}"
description = "Add your description here"
readme = "README.md"
version = "{{ app_rdm_version | replace('~=', '') }}"
requires-python = ">= 3.14"

dependencies = [
  "invenio-app-rdm{% if app_rdm_extras %}[{{ app_rdm_extras | join(',') }}]{% endif %}{{ app_rdm_version }}",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "python-dotenv>=0.21.0",
  {% if cookiecutter.site_code == 'yes' -%}
  "{{ site_dist_name }}",
  {%- endif %}
]

{% if cookiecutter.site_code == 'yes' -%}
[tool.uv.sources]
"{{ site_dist_name }}" = { workspace = true }

[tool.uv.workspace]
members = ["site"]
{%- endif %}

[project.optional-dependencies]
tests = [
  "pytest-invenio>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
