{%- set package_name = cookiecutter.package_name + '-package' %}

{%- if cookiecutter.python_package_manager == 'uv'%}
[project]
name = "{{ package_name }}"
description = "Add your description here"
dynamic = ["version"]
[tool.hatch.version]
path = "{{ package_name }}/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["{{ package_name }}"]
{% endif %}

{%- if cookiecutter.python_package_manager == 'pipenv'%}
[build-system]
requires = ["setuptools", "wheel", "babel>2.8"]
build-backend = "setuptools.build_meta"
{% endif %}
