{%- set dist_name = cookiecutter.project_shortname -%}
[project]
name = "{{dist_name}}"
version = "0.1.0"
description = "Add your description here"
requires-python = ">= 3.14"

[project.entry-points."invenio_base.blueprints"]
{{cookiecutter.package_name}}_views = "{{cookiecutter.package_name}}.views:create_blueprint"

[project.entry-points."invenio_assets.webpack"]
{{cookiecutter.package_name}}_theme = "{{cookiecutter.package_name}}.webpack:theme"

[project.optional-dependencies]
tests = [
  "pytest-invenio>=2.1.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.package_name}}"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D401", "D403"]

[tool.pytest.ini_options]
addopts = ["--isort", "--pydocstyle", "--doctest-glob=\"*.rst\"", "--doctest-modules", "--cov={{cookiecutter.package_name}}", "--cov-report=term-missing", "--exclude-warning-annotations"]
testpaths = "tests {{cookiecutter.package_name}}"
live_server_scope = "module"
