{%- set package_name = cookiecutter.package_name + '_package' %}
[metadata]
name = {{package_name}}

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    {{cookiecutter.package_name}}_views = {{cookiecutter.package_name}}.views:create_blueprint
invenio_assets.webpack =
    {{cookiecutter.package_name}}_theme = {{cookiecutter.package_name}}.webpack:theme
